Final fix : use /auth endpoints for Render backend